# tuRINGed

./: CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: turingedConfig.cmake.in
examples/: CMakeLists.txt  homomorphic_ops_example.cpp  lwe_example.cpp  rlwe_example.cpp
include/turinged/: turinged.hpp
include/turinged/core/: math_utils.hpp  types.hpp
include/turinged/keys/: keys.hpp
include/turinged/operations/: homomorphic.hpp
include/turinged/polynomial/: polynomial.hpp
include/turinged/schemes/: ggsw.hpp  glev.hpp  glwe.hpp  lwe.hpp  rlwe.hpp
src/crypto/: README.md
src/fhe_core/: README.md
src/math/: README.md  bigint.cpp  bigint.hpp  matrix.cpp  matrix.hpp  ntt.cpp  ntt.hpp  polynomial.cpp  polynomial.hpp
src/rough/: ggsw.cpp  glev.cpp  lwe.cpp  pk_glwe.cpp  rlwe.cpp
src/schemes/: README.md
src/tests/: CMakeLists.txt  test_bigint  test_bigint.cpp  test_matrix  test_matrix.cpp  test_ntt  test_ntt.cpp  test_polynomial  test_polynomial.cpp  test_runner.cpp
src/turinged/: turinged.cpp
src/turinged/core/: math_utils.cpp
src/turinged/keys/: keys.cpp
src/turinged/operations/: homomorphic.cpp
src/turinged/polynomial/: polynomial.cpp
src/turinged/schemes/: ggsw.cpp  glev.cpp  glwe.cpp  lwe.cpp  rlwe.cpp
src/utils/: README.md
tests/: CMakeLists.txt
